--- a/ContactManagerStarter/Views/Contacts/_EditContact.cshtml
+++ b/ContactManagerStarter/Views/Contacts/_EditContact.cshtml
@@ -69,6 +69,9 @@
                 <div id="invalidEmailFeedback" class="invalidMessage">
                     Please provide a valid email.
                 </div>
+                <div id="emailNotAdded" class="invalidMessage">
+                    Please add provided email.
+                </div>
             </div>
             <div class="form-group col-md-4">
                 <select id="newEmailAddressType" class="form-control">
