--- a/ContactManagerStarter/Views/Contacts/_EditContact.cshtml
+++ b/ContactManagerStarter/Views/Contacts/_EditContact.cshtml
@@ -142,12 +142,16 @@
                 <div id="invalidAddressZipFeedback" class="invalidMessage addressFeedback">
                     Please provide a valid Zip.
                 </div>
+            
             </div>
             <div class="form-group col-md-2">
                 <select id="newAddressType" class="form-control">
                     <option value="Primary">Primary</option>
                     <option value="Business">Business</option>
                 </select>
+            </div>
+             <div id="addressNotAdded" class="invalidMessage addressFeedback">
+                Please add provided address.
             </div>
             <div class="form-group col-md-2">
                 <button id="addNewAddress" class="btn btn-info">Add</button>
