--- a/ContactManagerStarter/Views/Contacts/_EditContact.cshtml
+++ b/ContactManagerStarter/Views/Contacts/_EditContact.cshtml
@@ -33,7 +33,7 @@
             </div>
             <div class="form-group col-lg-4">
                 <label>Date of Birth*</label>
-                <input id="editContactDOB" class="form-control" value="@(Model.DOB != null ? @Model.DOB.ToString("MM-dd-yyyy") : string.Empty)">
+                <input id="editContactDOB" class="form-control" value="@(Model.DOB != null ? @Model.DOB.ToString("MM-dd-yyyy") : string.Empty)" type = "date">
                 <div id="invalidDOBFeedback" class="invalidMessage">
                     Please provide a valid Date of Birth.
                 </div>
